--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-matplotlib==3.5.1
+matplotlib==3.5.2
 numpy==1.21.4
 pandas==1.3.4
 pandas_datareader==0.10.0
@@ -6,3 +6,7 @@ scikit_learn==1.0.2
 streamlit==1.8.1
 tensorflow==2.9.1
 yfinance==0.1.74
+pystan==2.19.1.1
+fbprophet==0.7.1
+plotly==2.7.0
+
