--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,11 @@ matplotlib==3.5.2
 numpy==1.21.4
 pandas==1.3.4
 pandas_datareader==0.10.0
-scikit_learn==1.0.2
+scikit-learn==1.1.2
 streamlit==1.8.1
 tensorflow==2.9.1
 yfinance==0.1.74
 pystan==2.19.1.1
-fbprophet==0.7.1
+prophet==1.1
 plotly==2.7.0
 
